added gen path button so you don't have to referesh and removed unused code.

--- a/maze.htm
+++ b/maze.htm
@@ -24,5 +24,8 @@
 -->
 <canvas id="gamescreen">You're browser does not support HTML5.</canvas>
 <script src="js/maze.js"></script>
+<div id="genPathButton">
+<button onclick="reGenPath()">Gen Path</button>
+</div>
 </body>
 </html>
