--- a/maze.htm
+++ b/maze.htm
@@ -10,6 +10,9 @@
 <canvas id="gamescreen">You're browser does not support HTML5.</canvas>
 <div id="genPathButton">
 <button onclick="reGenPath()">Gen Path</button>
+<div >
+<button onclick="reTryPath()">Retry Path</button>
+</div>
 
 </div>
 <script src="js/maze.js"></script>
