--- a/maze.htm
+++ b/maze.htm
@@ -10,8 +10,12 @@
 <canvas id="gamescreen">You're browser does not support HTML5.</canvas>
 <div id="genPathButton">
 <button onclick="reGenPath()">Gen Path</button>
-<div >
+<div>
 <button onclick="reTryPath()">Retry Path</button>
+</div>
+
+<div>
+<button onclick="retryUntilSolved()">Auto-Solve</button>
 </div>
 
 </div>
