Changed first button to say [Gen Map]. Fixed small bug in displayResult that occurred when attempts was exactly 100 and the complete path was found -- no message would be displayed. Moved ogres up a bit in the cell by changing textLocationY+15 to +8.

--- a/maze.htm
+++ b/maze.htm
@@ -9,7 +9,7 @@
 
 <canvas id="gamescreen">You're browser does not support HTML5.</canvas>
 <div id="genPathButton">
-<button onclick="reGenPath()">Gen Path</button>
+<button onclick="reGenPath()">Gen Map</button>
 <div>
 <button onclick="reTryPath()">Retry Path</button>
 </div>
