--- a/maze.htm
+++ b/maze.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>game name</title>
+<title>Leader Maze</title>
 <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
