Fixed button spacing

--- a/maze.htm
+++ b/maze.htm
@@ -9,13 +9,13 @@
 
 <canvas id="gamescreen">You're browser does not support HTML5.</canvas>
 <div id="genPathButton">
-<button onclick="reGenPath()">Gen Map</button>
+<button class="buttonPads" onclick="reGenPath()">Gen Map</button>
 <div>
-<button onclick="reTryPath()">Retry Path</button>
+<button class="buttonPads" onclick="reTryPath()">Retry Path</button>
 </div>
 
 <div>
-<button onclick="retryUntilSolved()">Auto-Solve</button>
+<button  class="buttonPads" onclick="retryUntilSolved()">Auto-Solve</button>
 </div>
 
 </div>
