Attempting to get the UI correct just for prototype.

--- a/maze.htm
+++ b/maze.htm
@@ -6,17 +6,20 @@
 <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-
 <canvas id="gamescreen">You're browser does not support HTML5.</canvas>
 <div id="genPathButton">
+<div>
 <button class="buttonPads" onclick="reGenPath()">Gen Map</button>
+</div>
 <div>
 <button class="buttonPads" onclick="reTryPath()">Retry Path</button>
 </div>
-
 <div>
 <button  class="buttonPads" onclick="retryUntilSolved()">Auto-Solve</button>
 </div>
+</div>
+
+
 
 </div>
 <script src="js/maze.js"></script>
