Added code so max cols is set from input number control.  Also added attribute to input number element so that the value of 6 will be the default when the page is loaded and refreshed.  Now user can set size of grid and generate solutions.

--- a/maze.htm
+++ b/maze.htm
@@ -17,6 +17,9 @@
 <div>
 <button  class="buttonPads" onclick="retryUntilSolved()">Auto-Solve</button>
 </div>
+<div>
+<input id="maxCols" type="number"  value="6" autocomplete="off">
+</div>
 </div>
 
 
