Set min value on input number for max cols.

--- a/maze.htm
+++ b/maze.htm
@@ -18,7 +18,7 @@
 <button  class="buttonPads" onclick="retryUntilSolved()">Auto-Solve</button>
 </div>
 <div>
-<input id="maxCols" type="number"  value="6" autocomplete="off">
+<input id="maxCols" type="number"  value="6" autocomplete="off" min="4">
 </div>
 </div>
 
