Attempting to make sure the page is not cached (because of oddness I'm seeing in mobile browser) but this is old code and my not even be correct.

--- a/maze.htm
+++ b/maze.htm
@@ -4,6 +4,8 @@
 <meta charset="UTF-8" />
 <title>Leader Maze</title>
 <link rel="stylesheet" href="css/main.css" />
+<META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+<META HTTP-EQUIV="Expires" CONTENT="-1">
 </head>
 <body>
 <canvas id="gamescreen">You're browser does not support HTML5.</canvas>
