Created a way for user to turn display of challenges (ogres/traps) on/off.  This was simple and provides a way to test the map as we add logic to the game.

--- a/maze.htm
+++ b/maze.htm
@@ -22,6 +22,9 @@
 <div>
 <input id="maxCols" type="number"  value="6" autocomplete="off" min="4">
 </div>
+<div>
+<input id="challengesCheck" type="checkbox" onclick="displayChallengesClicked()" autocomplete="off" checked><span>Display Challenges</span>
+</div>
 </div>
 
 
