Almost breaking changes but the app does still work but it's quite ugly because it redraws whenever you move the mouse over the canvas.  Moving towards adding ability for user to select a token that represents a specific character and allow user to grab token and move it around on the board.

--- a/maze.htm
+++ b/maze.htm
@@ -8,6 +8,7 @@
 <META HTTP-EQUIV="Expires" CONTENT="-1">
 </head>
 <body>
+<img style="visibility:hidden;display:none;" src="assets/characters.png" id="allCharacters" />
 <canvas id="gamescreen">You're browser does not support HTML5.</canvas>
 <div id="genPathButton">
 <div>
