Added a new set  of characters from some pixel art.  Really just an example but I'll use them as I continue building the app.

--- a/maze.htm
+++ b/maze.htm
@@ -8,7 +8,8 @@
 <META HTTP-EQUIV="Expires" CONTENT="-1">
 </head>
 <body>
-<img style="visibility:hidden;display:none;" src="assets/characters.png" id="allCharacters" />
+<img style="visibility:hidden;display:none;" src="assets/characters.png" id="characterSet1" />
+<img style="visibility:hidden;display:none;" src="assets/characters1.png" id="characterSet2" />
 <canvas id="gamescreen">You're browser does not support HTML5.</canvas>
 <div id="genPathButton">
 <div>
