Added output at top so you can see what is happening in game instead of having watch the console.

--- a/maze.htm
+++ b/maze.htm
@@ -12,6 +12,7 @@
 <img style="visibility:hidden;display:none;" src="assets/characters1.png" id="characterSet2" />
 <div id="scoreboard">
 <div id="gameclock"></div>
+<span id="output"></span>
 </div>
 <hr/>
 <canvas id="gamescreen">You're browser does not support HTML5.</canvas>
