Altered initTokens to generalize it more so it can be used to initialize tokens for player-characters and for game items.  Also added items.png and altered htm to load the png.

--- a/maze.htm
+++ b/maze.htm
@@ -10,6 +10,7 @@
 <body>
 <img style="visibility:hidden;display:none;" src="assets/characters.png" id="characterSet1" />
 <img style="visibility:hidden;display:none;" src="assets/characters1.png" id="characterSet2" />
+<img style="visibility:hidden;display:none;" src="assets/items.png" id="items" />
 <div id="scoreboard">
 <div id="gameclock"></div>
 <span id="output"></span>
