removed regenPath(), now all work is done via initApp(). The rework seems to be helping to make the code smaller.

--- a/maze.htm
+++ b/maze.htm
@@ -19,7 +19,7 @@
 <canvas id="gamescreen">You're browser does not support HTML5.</canvas>
 <div id="genPathButton">
 <div>
-<button class="buttonPads" onclick="reGenPath()">Gen Map</button>
+<button class="buttonPads" onclick="initApp()">Gen Map</button>
 </div>
 <div>
 <button class="buttonPads" onclick="reTryPath()">Retry Path</button>
