--- a/maze.htm
+++ b/maze.htm
@@ -35,7 +35,7 @@
 <input id="maxCols" type="number"  value="6" autocomplete="off" min="4">
 </div>
 <div>
-<input id="challengesCheck" type="checkbox" onclick="displayChallengesClicked()" autocomplete="off" checked><span>Display Challenges</span>
+<input id="challengesCheck" type="checkbox" onclick="displayChallengesClicked()" autocomplete="off"><span>Display Challenges</span>
 </div>
 </div>
 
