Added a start clock button so the clock can be started manually.  Continuing work on adding the LESSER.  It now allows the user to choose 4 rooms to search.  They are added to an array and the rooms are highlighted.

--- a/maze.htm
+++ b/maze.htm
@@ -28,6 +28,7 @@
 <button  class="buttonPads" onclick="retryUntilSolved()">Auto-Solve</button>
 </div>
 <div>
+<button class="buttonPads" onclick="startClock()">Start Clock</button>
 <button class="buttonPads" onclick="stopClock()">Stop Clock</button>
 </div>
 
